HIS/force-app/main/default/objects/Contact/fields/Aadhaar_Card__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Card__c</fullName>
    <inlineHelpText>1234 1234 1234</inlineHelpText>
    <label>Aadhaar Card</label>
    <length>80</length>
    <type>Text</type>
</CustomField>