HIS/force-app/main/default/objects/Contact/fields/Driving_Licences__c.field-meta.xml
<CustomField>
    <fullName>Driving_Licences__c</fullName>
    <inlineHelpText>MH12 12345678923</inlineHelpText>
    <label>Driving Licences</label>
    <length>80</length>
    <type>Text</type>
</CustomField>