HIS/force-app/main/default/objects/Contact/fields/ID_Proof__c.field-meta.xml
<CustomField>
    <fullName>ID_Proof__c</fullName>
    <label>ID Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhaar Card</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Driving Licences</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>