HIS/force-app/main/default/objects/Contact/fields/PAN_Card__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card__c</fullName>
    <inlineHelpText>ABCTY1234D</inlineHelpText>
    <label>PAN Card</label>
    <length>80</length>
    <type>Text</type>
</CustomField>